--- a/cat-homepage.html
+++ b/cat-homepage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" type="text/css" rel="stylesheet" media="all">
     <title>Valentine's Homepage</title>
   </head>
 
