--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/styles.css" type="text/css" rel="stylesheet" media="all">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-1.12.0.min.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Valentine's Homepage</title>
   </head>
 
@@ -41,6 +44,7 @@
         </a>
       </li>
     </ol>
-
+    <button type="button" class="btn btn-secondary" id="light-btn">Light View</button>
+    <button type="button" class="btn btn-primary" id="dark-btn">Dark View</button>
     </body>
 </html>
